# ttf-rendering

./: .clangd  CMakeLists.txt  Makefile  README.md  a.out  flake.nix  main  main.c  test_render.py
include/: types.h
include/font/: font.h  ttf.h
include/font/tables/: cmap.h  glyf.h  head.h  hhea.h  hmtx.h  loca.h  maxp.h
include/graphics/: buffer.h  graphics.h  shader.h  texture.h  window.h
resources/shader/: fragment.glsl  vertex.glsl
src/: main.c  ttf.c  ttf.h  window.c  window.h
src/font/: font.c  ttf.c
src/font/tables/: cmap.c  glyf.c  head.c  hhea.c  hmtx.c  loca.c  maxp.c
src/graphics/: buffer.c  shader.c  texture.c  window.c
src/tables/: cmap.c  glyf.c  glyf.h  head.c  hhea.c  hmtx.c  htmx.c  loca.c  maxp.c
